<resources>
    <string name="app_name">Titans of Victory!</string>
    <string name="spin_to_win">Spin to win Game</string>
    <string name="easy">Very easy!</string>
    <string name="earn">Earning: </string>
    <string name="balance">%d</string>
    <string name="wheel_for_spin">wheel for spin</string>
    <string name="win">win</string>
    <string name="loading">Loading </string>
    <string name="reset">Reset</string>
    <string name="spin">spin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_game">Start game</string>
    <string name="name">Name</string>
    <string name="input_name">Your name</string>
    <string name="errorInput">Wrong name</string>
    <string name="input_name_set">%s</string>
    <string name="name_balance">%d \$</string>
    <string name="name_field">Player:</string>
    <string name="balance_field">"Balance: "</string>

</resources>