<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spinFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="ui.SpinFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolBar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/foldit_bold"
            android:pointerIcon="hand"
            android:text="@string/app_name"
            android:textColor="#FFFF00"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="3dp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text_spin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/foldit_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/spin_to_win"
        android:textColor="@color/yellow"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/foldit_extrabold"
        android:gravity="center"
        android:text="@string/name"
        android:background="@drawable/round_item_yellow"
        android:textColor="@color/dark_yellow"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/name_balance"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_spin"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/name_balance"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/foldit_extrabold"
        android:gravity="center"
        android:text="@string/name_balance"
        android:background="@drawable/round_item"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/text_spin"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.4" />


    <ImageView
        android:id="@+id/wheel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/wheel_for_spin"
        android:scaleType="center"
        android:src="@drawable/wheel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_spin"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/wheel_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/wheel_for_spin"
        android:scaleType="center"
        android:src="@drawable/wheel_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_spin"
        app:layout_constraintVertical_bias="0.2" />


    <Button
        android:id="@+id/button_spin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/foldit_regular"
        android:text="@string/spin"
        android:textColor="@color/dark_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_earn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wheel"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/text_earn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/foldit_regular"
        android:text="@string/earn"
        android:textColor="@color/yellow"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_balance"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wheel"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/text_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/foldit_regular"
        android:text="@string/balance"
        android:textColor="@color/dark_yellow"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_earn"
        app:layout_constraintTop_toBottomOf="@+id/wheel"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_yellow"
        android:fontFamily="@font/foldit_regular"
        android:text="@string/reset"
        android:textColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_balance"
        app:layout_constraintTop_toBottomOf="@+id/wheel"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="text_balance,text_earn,button_reset" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>