<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolBar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/foldit_bold"
            android:pointerIcon="hand"
            android:text="@string/app_name"
            android:textColor="#FFFF00"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="3dp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text_spin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/foldit_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/spin_to_win"
        android:textColor="@color/yellow"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/round_item"
        android:fontFamily="@font/foldit_regular"
        android:hint="@string/input_name"
        android:padding="12dp"
        android:textColor="@color/yellow"
        android:textColorHint="@color/yellow"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_spin"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.85" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/round_item"
        android:fontFamily="@font/foldit_bold"
        android:text="@string/start_game"
        android:textColor="@color/yellow"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.85" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_game"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth_percent="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>